--- a/packages/frontend/src/assets/base.css
+++ b/packages/frontend/src/assets/base.css
@@ -83,4 +83,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
 }
