--- a/packages/frontend/src/assets/base.css
+++ b/packages/frontend/src/assets/base.css
@@ -85,5 +85,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px;
+  padding: 5rem;
+  overflow-wrap: break-word;
 }
