--- a/packages/frontend/src/assets/base.css
+++ b/packages/frontend/src/assets/base.css
@@ -60,8 +60,8 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
+  color: currentColor;
+  background: radial-gradient(circle, rgba(169,203,242,0) 0%, rgba(226,222,237,1) 0%);
   transition:
     color 0.5s,
     background-color 0.5s;
